# zenyx

./: .gitignore  LICENSE  README.md  asds.json  nyxerium.py  nyxerium.pyon.debug.txt  pyon.debug.md  pyon.debug.txt  pyon.py  pyproject.toml  requirements.txt  semi_test.py  test.json  test.py  test_main.py  version_update.py  zenyx.py
scripts/: pyon.py  require.py
src/zenyx/: __init__.py  args.py  console.py  pipe.py  pyon.py  require.py  streams.py
tests/: databank.py  pyon.debug.md  test_main.py
zenyx/: __init__.py  pyon.py  require.py
