[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenyx"
version = "0.11.0"
authors = [
  { name="zewenn", email="zc.fallens@gamil.com" },
]
description = "A multitool python object notation package"
readme = "README.md"
requires-python = ">=3.11.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ZenTheDarkGod/zenyx"
Issues = "https://github.com/ZenTheDarkGod/zenyx/issues"